// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/components/AuditResultMessage render snap when auditResult is {} 1`] = `
<body>
  <div>
    <div
      class="custom-class-name css-1avyf41"
    >
      <span
        class="icon-wrapper"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
      </span>
      <span
        class="text-wrapper"
      >
        审核通过
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when current result is delete from rule manage & showAnnotation is false 1`] = `
<body>
  <div>
    <div
      class="has-delete-rule-wrapper css-1v03opz"
    >
      <span
        class="ant-tag ant-tag-volcano message-rule-disabled"
      >
        该规则已删除
      </span>
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when current result is delete from rule manage & showAnnotation is true 1`] = `
<body>
  <div>
    <div
      class="has-delete-rule-wrapper css-1v03opz"
    >
      <span
        class="ant-tag ant-tag-volcano message-rule-disabled"
      >
        该规则已删除
      </span>
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
      <div
        class="annotation-wrapper"
      >
        annotation text
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is UNKNOWN 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        >
          审核通过
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is UNKNOWN 2`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        >
          审核通过
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is empty 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is error 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
              fill="#F66074"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is normal 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        >
          审核通过
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is notice 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.28 2.084 4.637 4.638v6.558l-4.638 4.638H6.721L2.083 13.28V6.722l4.638-4.638zM9.165 12.5v1.667h1.667V12.5zm0-6.666v5h1.667v-5z"
              fill="#6094FC"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is warn 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
              fill="#EBAD1C"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has more link 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
      <div
        class="annotation-wrapper"
      >
        annotation text
        <a
          class="ant-typography"
          href="this is a link"
          rel="noopener noreferrer"
          target="_blank"
        >
          查看更多
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when showAnnotation 1`] = `
<body>
  <div>
    <div
      class="css-1v03opz"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
      <div
        class="annotation-wrapper"
      >
        annotation text
      </div>
    </div>
  </div>
</body>
`;
